# syntaxedit

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  Makefile  README.md  example.py  pyproject.toml
.github/workflows/: ci_cd.yml  release.yml
syntaxedit/: core.py  highlightslot.py
tests/: test_core.py  test_highlightslot.py
